# weather

./: .gitignore  CLAUDE.md  PLAN.md  README.md  TODO  cabal.project  justfile  pyproject.toml  weather.cabal
.claude/: settings.json
.github/workflows/: update-forecast.yml
app/: Forecast.hs  Main.hs
app/Effects/: Curl.hs
app/Polysemy/Error/: Extended.hs
app/Polysemy/Reader/: Extended.hs
docs/: index.html
docs/new/: index.html
haskell/: cabal.project  hie.yaml  justfile  weather.cabal
haskell/app/: Main.hs
haskell/src/: Display.hs  Forecast.hs  Program.hs
haskell/src/Effects/: Curl.hs  GetTime.hs  WriteFile.hs
haskell/src/Polysemy/Error/: Extended.hs
haskell/test/: ForecastSpec.hs  IntegrationSpec.hs
python/: .gitignore  justfile
python/src/weather/: dev_renderer.py  location_cli.py  renderer.py  scraper.py
python/src/weather/templates/: index.html
python/tests/: test_functional.py  test_renderer.py
src/: Display.hs  Forecast.hs  Program.hs
src/Effects/: Curl.hs  WriteFile.hs
src/Polysemy/Error/: Extended.hs
src/Polysemy/Trace/: Extended.hs
src/weather/: __init__.py  dev_renderer.py  location_finder.py  location_optimizer.py  location_tools.py  renderer.py  scraper.py
src/weather/templates/: index.html
test/: ForecastSpec.hs  IntegrationSpec.hs  MainSpec.hs
tests/: test_functional.py  test_renderer.py  test_scraper.py
