[project]
name = "weather"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = ["beautifulsoup4>=4.13.4", "requests>=2.32.4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"
pythonpath = ["src"]

[dependency-groups]
dev = ["pytest>=8.4.1", "responses>=0.25.7"]
