cabal-version: 3.8
name: weather
version:0.1.0.0
license: NONE
author: Ben Butler-Cole
maintainer: ben.butlercole@gmail.com
build-type: Simple

library
    exposed-modules:
        Effects.Curl,
        Forecast,
        Polysemy.Error.Extended,
        Polysemy.Reader.Extended,
        Polysemy.Trace.Extended,
        Program
    build-depends:
        base ^>=4.21.0.0,
        polysemy ^>=1.9.2.0,
        polysemy-plugin,
        http-client,
        http-client-tls,
        http-types,
        bytestring,
        containers,
        scalpel
    hs-source-dirs: src
    default-language: GHC2021
    ghc-options: -Wall -Werror -fplugin=Polysemy.Plugin -O2 -flate-specialise -fspecialise-aggressively

executable weather
    main-is: Main.hs
    build-depends:
        base ^>=4.21.0.0,
        weather
    hs-source-dirs: app
    default-language: GHC2021
    ghc-options: -Wall -Werror

test-suite spec
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs:
        test
    ghc-options: -Wall -Werror
    build-depends:
        base,
        hspec,
        weather,
        containers
    other-modules:
        ForecastSpec,
        MainSpec
    default-language: GHC2021
    build-tool-depends: hspec-discover:hspec-discover
